# khafi-gateway

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  docker-compose.yml  docker-compose.zcash.yaml
config/: envoy.yaml  zcash.conf  zebrad.toml
crates/build-service/: Cargo.toml  Dockerfile
crates/build-service/src/: handlers.rs  lib.rs  main.rs  models.rs  storage.rs  worker.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  inputs.rs  lib.rs  nullifier.rs  receipt.rs
crates/image-id-registry/: Cargo.toml  Dockerfile
crates/image-id-registry/src/: handlers.rs  lib.rs  main.rs  models.rs  storage.rs
crates/logic-compiler/: Cargo.toml
crates/logic-compiler-api/: .env.example  Cargo.toml  Dockerfile  README.md
crates/logic-compiler-api/src/: config.rs  handlers.rs  lib.rs  main.rs
crates/logic-compiler-api/tests/: integration_test.rs
crates/logic-compiler/examples/: debug_pharma.rs  debug_shipping.rs  generate_to_file.rs  show_generated.rs
crates/logic-compiler/src/: dsl.rs  lib.rs  parser.rs
crates/logic-compiler/src/codegen/: guest_template.rs  mod.rs  type_gen.rs  validation_gen.rs
crates/logic-compiler/tests/: codegen_test.rs  integration_test.rs
crates/methods/: Cargo.toml
crates/methods/guest/: Cargo.toml
crates/methods/guest/src/: main.rs
crates/methods/src/: lib.rs
crates/proof-generation-service/: Cargo.toml  Dockerfile
crates/proof-generation-service/src/: handlers.rs  lib.rs  main.rs  models.rs  prover.rs  registry_client.rs
crates/sdk-template/: Cargo.toml  README.md
crates/sdk-template/src/: builders.rs  lib.rs  prover.rs  zcash_client.rs
crates/zcash-backend/: .env  Cargo.toml  Dockerfile  README.md  build.rs
crates/zcash-backend/proto/: compact_formats.proto  service.proto
crates/zcash-backend/src/: api.rs  config.rs  lib.rs  lightwalletd_client.rs  main.rs  mock_node.rs  monitor.rs  note_decryption.rs  parser.rs  storage.rs
crates/zcash-backend/tests/: integration_test.rs
crates/zk-verification-service/: Cargo.toml  Dockerfile  build.rs
crates/zk-verification-service/proto/: ext_authz.proto
crates/zk-verification-service/src/: config.rs  lib.rs  main.rs  nullifier.rs  payment.rs  service.rs
docs/: host-vs-guest-code.md  implementation-plan.md  k8s.md  product-description.md  risc0-setup-complete.md  zcash-backend.md  zcash-integration.md  zcash-verification-flow.md
docs/architecture/: two-proof-system.md
docs/examples/: age-verification-simple.json  pharma-rules.json  shipping-rules.json
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DslEditor.tsx  LandingPage.tsx  LivePreview.tsx  TemplateGallery.tsx
frontend/src/services/: api.ts
frontend/src/types/: dsl.ts
generated_guests/: age-verification-simple_guest.rs  pharma-rules_guest.rs  shipping-rules_guest.rs
k8s/: README.md  configmap.yaml  ingress.yaml  namespace.yaml  secrets.yaml.template
k8s/backend/: build-service.yaml  image-id-registry.yaml  kustomization.yaml  logic-compiler-api.yaml  proof-generation-service.yaml  redis.yaml  zcash-backend.yaml  zk-verification-service.yaml
k8s/base/: kustomization.yaml
k8s/frontend/: deployment.yaml  kustomization.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/gcp/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/traefik/: deployment.yaml  kustomization.yaml
