[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/methods",
    "crates/sdk-template",
    "crates/logic-compiler",
    "crates/zk-verification-service",
    "crates/zcash-backend",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/misbar/khafi-gateway"

[workspace.dependencies]
# ZK
risc0-zkvm = "3.0.3"
risc0-build = "3.0.3"

# gRPC
tonic = "0.14.2"
prost = "0.14.1"
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
tonic-prost = "0.14.2"

# Zcash
zcash_primitives = "0.26.1"
orchard = "0.11"
zcash_client_backend = "0.21"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Storage
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Code generation (for logic-compiler)
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Web framework (for logic-compiler REST API)
axum = "0.8.7"
tower = "0.5.2"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Utilities
hex = "0.4"
tempfile = "3.8"

# RISC Zero optimization profiles
# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
