[package]
name = "image-id-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Config
dotenvy = "0.15"

[[bin]]
name = "image-id-registry"
path = "src/main.rs"

[lib]
name = "image_id_registry"
path = "src/lib.rs"
