[package]
name = "logic-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
khafi-common = { path = "../common" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Code generation
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

# Utilities
tempfile.workspace = true
