[package]
name = "zcash-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
khafi-common = { path = "../common" }
tokio.workspace = true
zcash_primitives.workspace = true
orchard.workspace = true
redis.workspace = true
tracing.workspace = true
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
