[package]
name = "zcash-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
khafi-common = { path = "../common" }
tokio = { workspace = true, features = ["full"] }
zcash_primitives.workspace = true
orchard.workspace = true
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
tracing.workspace = true
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
tower-http = { version = "0.6", features = ["trace", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"

[[bin]]
name = "zcash-backend"
path = "src/main.rs"
