[package]
name = "zk-verification-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
khafi-common = { path = "../common" }
methods = { path = "../methods" }
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
tokio.workspace = true
risc0-zkvm.workspace = true
redis.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
hex.workspace = true
serde.workspace = true
bincode.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-prost-build.workspace = true
